--- a/admin/package.json
+++ b/admin/package.json
@@ -29,10 +29,12 @@
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-cloudinary": "^6.5.2",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "recharts": "^2.12.7",
     "stripe": "^15.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
