--- a/store/package.json
+++ b/store/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "swiper": "^11.1.4",
     "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.2"
   },
